3.7:
    - drop support for v<1.0.0
    - remove emtable requirement
    - update citations
    - update the installer
3.6.1: fix error when no downsampling was done, preprocess step cannot be skipped
3.6:
    - add possible outputs class
    - update for versions 1.0.0, 1.1.0
3.5.1: fix missing arg for training preprocessed particles
3.5: 0.3.5 added
3.4: 0.3.4 added
3.3: 0.3.3b added
3.2:
    - 0.3.2b added
    - Use preprocess when chunks despite scaling, also use input star when no preprocess
    - Added missing parameters and use extraParams if set
    - Added server mode to use the Jupyter nb remotely
    - Improved the help of the nb in server mode
3.1:
    - Update to use version 0.3.2, deprecated versions < 0.3.0
    - protocol preprocess
    - Allow to specify chunk of particle stacks
    - Generate output CryoDrgnParticles
    - protocol training
    - Use import particles from preprocess
    - Run basic analysis as another step
    - viewer: does not run analysis now
3.0.3:
 - add version 0.3.1
 - close #8, #9, #10
 - run Jupyter notebook in a separate thread
 - fix visualizing vols in ChimeraX
3.0.2 - add version 0.3.0b support, add relion plugin dependency for preprocess protocol
3.0.0 - add missing pip files, fix installation
3.0.0b4 - switch to emtable, same as relion plugin
3.0.0b3 - avoid using void for install, update to 0.2.1b, add relion as deps for convertions
3.0.0b2 - fix installation bug
3.0.0b1 - changed version to reflect Scipion 3 support
1.0.0 - first version of the plugin