@@ -30,7 +30,7 @@
   doi = {10.1101/2022.08.09.503342},
   url = {https://doi.org/10.1101/2022.08.09.503342},
   year = {2022},
-  month = aug,
+  month = {aug},
   publisher = {Cold Spring Harbor Laboratory},
   author = {Laurel F. Kinman and Barrett M. Powell and Ellen D. Zhong and Bonnie Berger and Joseph H. Davis},
   title = {Uncovering structural ensembles from single particle cryo-{EM} data using {cryoDRGN}}
