@@ -96,6 +96,6 @@ class TestCryoDrgn(BaseTest):
 
         print(magentaStr("\n==> Testing cryoDRGN - training:"))
 
-        protTrain = self.newProtocol(CryoDrgnProtTrain, numEpochs=3, zDim=1)
+        protTrain = self.newProtocol(CryoDrgnProtTrain, numEpochs=3, zDim=2)
         protTrain.inputParticles.set(preprocess.outputCryoDrgnParticles)
         self.launchProtocol(protTrain)
